--- a/src/main/resources/application-oauth.properties
+++ b/src/main/resources/application-oauth.properties
@@ -1,3 +1,16 @@
 spring.security.oauth2.client.registration.google.client-id=670529962964-2k4p4nhet2e5vfu2njovq3al5s9a7crt.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=XLG5hBGLlk0vIrpMBj_Hml92
 spring.security.oauth2.client.registration.google.scope=profile,email
+
+spring.security.oauth2.client.registration.naver.client-id=leKindnEmE54lExftxC1
+spring.security.oauth2.client.registration.naver.client-secret=5df5gUXWgT
+spring.security.oauth2.client.registration.naver.redirect-uri={baseUrl}/{action}/oauth2/code/{registrationId}
+spring.security.oauth2.client.registration.naver.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.naver.scope=name,email,profile_image
+spring.security.oauth2.client.registration.naver.client-name=Naver
+
+# provider
+spring.security.oauth2.client.provider.naver.authorization-uri=https://nid.naver.com/oauth2.0/authorize
+spring.security.oauth2.client.provider.naver.token-uri=https://nid.naver.com/oauth2.0/token
+spring.security.oauth2.client.provider.naver.user-info-uri=https://openapi.naver.com/v1/nid/me
+spring.security.oauth2.client.provider.naver.user-name-attribute=response
