--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 spring.h2.console.enabled=true
 spring.profiles.include=oauth
 spring.session.store-type=jdbc
+
+spring.main.allow-bean-definition-overriding=true
